--- a/app/src/main/res/layout/activity_create_product.xml
+++ b/app/src/main/res/layout/activity_create_product.xml
@@ -28,7 +28,7 @@
         android:layout_height="53dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Nombre del Producto"
+        android:hint="Nombre del Producto"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:layout_height="53dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Precio"
+        android:hint="Precio"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
