--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -10,17 +10,17 @@
 
     <EditText
         android:id="@+id/txt_user_img"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:layout_width="359dp"
+        android:layout_height="53dp"
+        android:ems="10"
         android:hint="URL de la imagen"
-        android:inputType="textUri"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.307"
-        tools:ignore="UnknownId" />
+        app:layout_constraintVertical_bias="0.268" />
 
     <TextView
         android:id="@+id/textView2"
@@ -42,7 +42,7 @@
         android:layout_height="53dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Nombre del Usuario"
+        android:hint="Nombre del Usuario"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         android:layout_height="53dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Email@email.com"
+        android:hint="Email@email.com"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
